--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
             <input type="text" id="employeeId" name="employeeId" required>
             <br>
             
-            <label for="kaizen">ಕೈಜೆನ್ ವಿವರಣೆ | Kaizen Description:</label>
+            <label for="kaizen">ಕೈಜೆನ್ ವಿವರಣೆ | Kaizen Des:</label>
             <input type="text" id="kaizen" name="kaizen" required>
             <br>
                                                             
