Employee Involvement graph

--- a/public/graph.html
+++ b/public/graph.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Volvo Responses Graph</h1>
+        <h1>Employee Involvement Graph</h1>
         <canvas id="employeeChart"></canvas>
         <a href="index.html">Back to Form</a>
     </div>
