UpperCase_Name_Input

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
            
             <label for="employeeName">1. Name: </label>
-            <input type="text" id="employeeName" name="employeeName" required>
+            <input type="text" id="employeeName" style="text-transform: uppercase" name="employeeName" required>
             
             <br>
 
