progress report size changed

--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
             <br>
 
             <input type="file" id="fileInput" required />
-            <label for="fileInput">Upload Image </label><br>
+            <label for="fileInput">Upload relevant Image </label><br>
             
 
             <div id="progress">
