--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,7 @@
             <br>
 
             <input type="file" id="fileInput" required />
+            <label for="fileInput">Upload Image </label><br>
             <label for="fileInput"> Upload relevant Image </label><br>
             <progress id="uploadProgress" value="0" max="100"></progress>
 
