--- a/public/graph.html
+++ b/public/graph.html
@@ -11,7 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div class="container01">
         <h1>Employee Involvement Graph</h1>
         <canvas id="employeeChart"></canvas>
         <a href="index.html">Back to Form</a>
