--- a/public/graph.html
+++ b/public/graph.html
@@ -27,7 +27,7 @@
             width: 70%;
         }
         .sidebar {
-            font-size: small;
+            font-size: x-small;
             display: flex;
             flex-direction: column;
             align-items: center;
