--- a/public/graph.html
+++ b/public/graph.html
@@ -33,10 +33,18 @@
             align-items: center;
             justify-content: center;
             background: #f4f4f4;
-            width: 60%;
+            width: 80%;
             padding: 10 px;
             box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
         }
+
+        .qwerty {
+           display: flex;
+           height: 10%;
+           width: 30%;
+
+        }
+
         .content {
             width: 80%;
             display: flex;
@@ -48,6 +56,8 @@
             height: 100%;
             width: 100%;
         }
+
+
     </style>
 
 
@@ -58,7 +68,11 @@
         <h1>Employee Involvement Graph</h1>
        
         <a href="index.html">Back to Form</a>
-    </div>
+        <br>
+        <br>
+        <img  class="qwerty" src="https://firebasestorage.googleapis.com/v0/b/volvo-ce-1274c.appspot.com/o/WhatsApp%20Image%202024-06-13%20at%2012.49.03_e5842391.jpg?alt=media&token=67291064-da29-4cf1-9dc9-84bcc4fe531b" alt="" srcset="">
+    
+</div>
 </div>
 
 
